--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'com.github.salehyarahmadi:FileAndFolderPicker:1.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.31'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.skydoves:progressview:1.0.7'
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.opencsv:opencsv:4.6'
-    implementation 'com.github.salehyarahmadi:FileAndFolderPicker:1.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 }
